rke2/plex-system/overseerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: plex-system
  labels:
    app: overseerr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: overseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      # Pinned to microedge2 to match the rest of plex-system.
      nodeSelector:
        kubernetes.io/hostname: microedge2
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:latest
          ports:
            - name: http
              containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /app/config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: overseerr-config
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: plex-system
spec:
  selector:
    app: overseerr
  ports:
    - name: http
      protocol: TCP
      port: 5055
      targetPort: 5055
  type: LoadBalancer
  loadBalancerIP: 10.44.0.15
