rke2/plex-system/prowlarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: plex-system
  labels:
    app: prowlarr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      # Pinned to microedge2 to match the rest of plex-system.
      nodeSelector:
        kubernetes.io/hostname: microedge2
      securityContext:
        fsGroup: 1000
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr:latest
          ports:
            - name: http
              containerPort: 9696
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: configmap
          configMap:
            name: prowlarr-config-xml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: plex-system
spec:
  selector:
    app: prowlarr
  ports:
    - name: http
      protocol: TCP
      port: 9696
      targetPort: 9696
  type: LoadBalancer
  loadBalancerIP: 10.44.0.12
