rke2/plex-system/httproute-seerr.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seerr
  namespace: plex-system
spec:
  parentRefs:
    - name: hwcopeland-gateway
      namespace: kube-system
      sectionName: https
  hostnames:
    - "seerr.hwcopeland.net"
  rules:
    - backendRefs:
        - name: overseerr
          port: 5055
